# kniv-nlp-models

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
corpus/domains/: domain_config.yaml  wiki_common.py
corpus/pipeline/: __init__.py  annotate.py  audit.py  classify.py  config.py  export.py  gold_filter.py  stats.py  validate.py
corpus/scripts/: annotate.sh  build_all.sh  collect.sh  export.sh  validate.sh
data/: README.md  download_conll.sh  download_ud.sh
docs/: architecture.md  cascade-model.md  corpus-pipeline.md  data-preparation-plan.md  design-coreference-resolution.md  design-extractive-qa.md  design-knowledge-distillation.md  design-query-reformulation.md  proposal-cascade-nlp-platform.md  training.md
eval/: cls_annotation_guide.md
examples/: cascade_demo.py  cascade_onnx_demo.py
models/deberta-v3-large-nlp-en/: README.md  config.yaml  evaluate_baseline.py  evaluate_model.py  evaluate_onnx.py  generate_soft_labels.py  model.py  prepare_data.py  train.py
models/deberta-v3-nlp-en/: README.md  config.yaml  distill.py  evaluate_model.py  evaluate_onnx.py  model.py  prepare_data.py  train.py
models/distilroberta-nlp-en/: README.md  config.yaml  dep2label.py  evaluate_baseline.py  evaluate_model.py  evaluate_onnx.py  export.py  model.py  prepare_data.py  train.py
models/kniv-deberta-cascade-large-nlp-en/: config.yaml  evaluate_leader.py  extend_srl_spans.py  generate_soft_labels.py  label_srl_allennlp.py  model.py  prepare_cls_balanced.py  prepare_conll2012_eval.py  prepare_data.py  prepare_docred.py  (+12 more)
scripts/: benchmark.sh  colab_train.py  eval_benchmarks.py  evaluate.sh  export.sh  publish.sh  setup.sh  train.sh
shared/: __init__.py  evaluate.py  export_onnx.py  hf_publish.py  hf_publish_dataset.py
(+49 files in other folders)
